refactor: replace Arrays.asList by List.of